# django-currency-rates

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  MANIFEST.in.orig  Pipfile  README.rst  manage.py  pyproject.toml  setup.py
.github/workflows/: bumpversion.yml
currency_rates/: CHANGELOG.md  __init__.py  admin.py  exceptions.py  exchangeratesorguk.py  forms.py  mixins.py  models.py  tests.py  views.py  widgets.py
currency_rates.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
currency_rates/converters/: __init__.py  alphavantage.py  currencyapicom.py  exchangeratesapiio.py  exchangeratesorguk.py  forexpython.py
currency_rates/management/commands/: load_currencies.py  load_rates.py
currency_rates/migrations/: 0001_initial.py  0002_auto_20200129_0814.py
currency_rates/templates/currency_rates/: exchange_rate_form.haml
django_currency_rates/: settings.py  urls.py  wsgi.py
example/: manage.py
example/example/: settings.py  urls.py
