[tool.poetry]
name = "django-currency_rates"
version = "0.9.2"
description = "Currencies & echange rates for django projects"
license = "GPL"
classifiers = [
            "Development Status :: 5 - Production/Stable",
            "Environment :: Web Environment",
            "Framework :: Django",
            "Intended Audience :: Developers",
            "License :: OSI Approved :: GNU General Public License (GPL)",
            "Topic :: Internet :: WWW/HTTP :: Dynamic Content"
            ]
homepage = "http://bitbucket.org/ferranp/django-currency-rates"
authors = ["Ferran Pegueroles <ferran@pegueroles.com>"]
readme = "README.rst"
packages = [
    { include = "currency_rates" },
]

[tool.poetry.dependencies]
python = "^3.9.6"
Django = "^4.0.3"
pre-commit = "^2.18.1"
django-select2 = "^7.10.0"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
rich = "^12.5.1"

[tool.poetry.group.dev.dependencies]
commitizen = "^2.36.0"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.9.2"
tag_format = "$version"
version_files = [
  "pyproject.toml:version",
]
