[tool.poetry]
name = "django-currency_rates"
version = "0.13.10"
description = "Currencies & echange rates for django projects"
license = "GPL"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License (GPL)",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
homepage = "http://bitbucket.org/ferranp/django-currency-rates"
authors = ["Ferran Pegueroles <ferran@pegueroles.com>"]
readme = "README.rst"
packages = [{ include = "currency_rates" }]

[tool.poetry.dependencies]
python = "^3.12 || ^3.11 || ^3.10"

Django = "^5.0.2"
django-select2 = "^7.10.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
rich = "^13.7.0"
django-stubs = "^4.2.7"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.14.1"
pre-commit = "^3.6.1"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.13.10"
tag_format = "$version"
version_files = ["pyproject.toml:version"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
